syntax = "proto3";
package openPanel;

import "entpb.proto";
import "common.proto";

message InitializeRequest {
  string ip = 1;
  int32 port = 2;
  string serverID = 3;
  string token = 4;
}

message InitializeResponse {
  string clientCert = 1;
  string clientPrivateKey = 2;
  string CACert = 3;
  repeated entpb.Node nodes = 4;
  Error error = 5;
}


service InitializeService {
  rpc Initialize(InitializeRequest) returns (InitializeResponse);
}